--- a/styles/Layout/header.scss
+++ b/styles/Layout/header.scss
@@ -227,13 +227,13 @@
     width: 100%;
     top: 0;
     left: 0;
-    padding: 30px 0px 0px 0px;
-    margin: 60px 0px 0px 0px;
+    // padding: 30px 0px 0px 0px;
+    margin: 90px 0px 0px 0px;
     transform: translateY(-100%);
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s ease 0s;
-    &:hover {
+    &.hover {
         transform: translateY(0%);
         opacity: 1;
         visibility: visible;
@@ -297,20 +297,13 @@
         
     }
     @media (max-width: 1240px) {
-        padding: 30px 15px 0px 15px;
+        padding: 0px 15px 0px 15px;
     }
     @media (max-width: 1024px) {
         display: none;
     }
 }
 
-.trigger:hover + .submenu {
-    transform: translateY(0%);
-    opacity: 1;
-    visibility: visible;
-    z-index: 10;
-}
-// 
 // Menu-btn
 
 .menu-mob {
